CSS refactor Make responsible border-size/border-radius CSS properties -- now vh in use instead of rem Impove readability of CSS -- add new classes in 'base.css' for less repetitions, renamed some of them for better readability, corresponding change of html pages Fix wrong url: /matches-history -> /matches in index.html Add stub instead of MatchesHistoryController in 'dispatcher.py' since this controller is not implemented yet

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,6 +35,34 @@ main, header, footer {
     box-sizing: border-box;
 }
 
+.table-text-regular {
+    color: rgb(218,223,0);
+    font-weight: bold;
+    font-family: 'Helvetica', sans-serif;
+}
+
+.table-text-screen {
+    background-color: rgb(56,54,53);
+    border: 2vh solid white;
+
+    color: rgb(218,223,0);
+    /* font-weight: bold; */
+    font-family: 'Score Board', Helvetica, sans-serif;
+}
+
+.centered-flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.table {
+    border: 2vh solid white;
+    border-radius: 4vh;
+    box-shadow: 2vh 2vh grey;
+    background-color: rgb(20,174,103);
+}
+
 button {
     display: inline-block;
     aspect-ratio: 9 / 16;
@@ -44,9 +72,11 @@ button {
     border-radius: 2rem;
     box-shadow: 1rem 1rem grey;
 
-    font-family: 'Helvetica', sans-serif;
     color: rgb(218,223,0);
     font-weight: bold;
+    /* font-family: 'Helvetica', sans-serif;
+    color: rgb(218,223,0);
+    font-weight: bold; */
     /* font-size: 1.25rem; */
     font-size: 2rem;
     text-transform: uppercase;
@@ -61,9 +91,9 @@ button:active {
     box-shadow: 0.5rem 0.5rem grey;
 }
 
-.flex {
+/* .flex {
     display: flex;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-}
+} */
