--- a/static/css/error-page.css
+++ b/static/css/error-page.css
@@ -1,28 +1,28 @@
 @import url("base.css");
 
-.error-box-wrapper {
+main {
+    display: flex;
     justify-content: center;
-
-    width: 100%;
-    height: 80%;
+    
     margin: 0;
     padding: 0;
 }
-.error-box {
-    justify-content: center;
+
+main h1 {
+    font-size: 3rem;
+}
+
+.error-table {
+    display: flex;
     flex-wrap: wrap;
-
+    justify-content: center;
+    
     aspect-ratio: 3 / 2;
-
-    width: 50%;
+    
+    height: 80%;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
-    box-shadow: 1rem 1rem grey;
-    background-color: rgb(20,174,103);
-    border: 1rem solid white;
-    border-radius: 2rem;
 }
 
 .table-text {
@@ -41,40 +41,36 @@
     align-items: center;
     justify-content: center;
 
-    color: rgb(218,223,0);
-    font-weight: bold;
-    font-family: 'Score Board', Helvetica, sans-serif;
-    font-size: 2rem;    
 }
-
 
 h1 {
     height: 30%;
     width: 100%;
 }
 
-span.error-msg {
-    justify-content: center;
-
+.error-msg {
     height: 50%;
-    width: 60%;   
+    width: 60%;
 
-    background-color: rgb(56,54,53);
-    border: 1rem solid white;
+    font-size: 3rem;
 }
 
 .error-msg-wrapper {
+    display: flex;
     justify-content: center;
-    /* align-items: center; */
 
     height: 30%;
+    width: 100%;
+    /* box-sizing: border-box; */
 }
 
 form.error-form {
+    display: flex;
     justify-content: center;
 
     height: 40%;
     width: 100%;
+    /* box-sizing: border-box; */
 }
 
 
