--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,11 +1,22 @@
 @import url("base.css");
 
 .main-menu-wrapper {
+    display: flex;
     justify-content: space-around;
+
+    box-sizing: border-box;
+
+    width: 100%;
+    height: 100%;
 }
 
 .main-menu-wrapper form {
+    display: flex;
     align-items: center;
+
+    box-sizing: border-box;
+    
+    height: 100%;
     width: 25%;
 }
 
