--- a/static/css/match-score.css
+++ b/static/css/match-score.css
@@ -14,7 +14,7 @@ form button {
     width: 100%;
 }
 
-.table-wrapper {
+.wrapper {
     display: flex;
 
     width: 100%;
@@ -23,57 +23,50 @@ form button {
     padding: 0;
 }
 
-.table-box {
+.main-table {
     aspect-ratio: 3 / 2;
     
     width: 50%;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
-    box-shadow: 1rem 1rem grey;
-    background-color: rgb(20,174,103);
-    border: 1rem solid white;
-    border-radius: 2rem;
 }
 
 .table-el {
-    display: inline-block;
-
     box-sizing: border-box;
     margin: 2.5%;
-
-    background-color: rgb(56,54,53);
-    border: 1rem solid white;
 }
 
-/* .table-el {
-    display: inline-block;
-
-    box-sizing: border-box;
-    margin: 2.5%;
-
-    background-color: rgb(56,54,53);
-    border: 1rem solid white;
-} */
 
 .player-names {
+    display: flex;
     justify-content: space-between;
+
     height: 20%;
+    width: 100%;
 }
 .p-name {
     width: 41%;
+
+    font-size: 1.5rem;
 }
 
 .score-points {
+    display: flex;
     justify-content: space-evenly;
+    
     height: 50%;
+    width: 100%;
+
 }
-.digits {
+.game-score {
+    display: flex;
     justify-content: space-evenly;  
+    
     width: 44%;
+    height: 100%;
 }
-.digits .score-digit {
+.game-score .score-digit {
     width: 40%;
 
     font-size: 10rem;
@@ -81,10 +74,12 @@ form button {
 }
 
 .table-colon {
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     
+    height: 100%;
     width: 12%;
 }
 .dot {
@@ -92,15 +87,17 @@ form button {
     width: 50%;
 
     background-color: red;
-    border: 1rem solid white;
-    border-radius: 3rem;
+    border: 2vh solid white;
+    border-radius: 6vh;
 }
 
 .score-sets {
+    display: flex;
     justify-content: center;
     align-items: center;
 
     height: 30%;
+    width: 100%;
 }
 .score-sets .p-sets {
     aspect-ratio: 1 / 1;
@@ -118,11 +115,6 @@ form button {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    color: rgb(218,223,0);
-    font-weight: bold;
-    font-family: 'Score Board', Helvetica, sans-serif;
-    font-size: 1.5rem;    
 }
 
 .change-score-form {
@@ -139,14 +131,13 @@ form button {
     height: 100%;
 }
 
-
 .add-point-btns-wrapper button {
     height: 50%;
     width: 15%;
     margin: 0 5%;   
 }
 
-.side-table-box {
+.side-table {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -155,14 +146,9 @@ form button {
     height: 100%;
     box-sizing: border-box;
     padding: 0;
-
-    background-color: rgb(20,174,103);
-    border: 1rem solid white;
-    border-radius: 2rem;
-    box-shadow: 1rem 1rem grey;
 }
 
-.side-table-box h2 {
+.side-table h2 {
     display: block;
 
     height: 5%;
@@ -176,21 +162,18 @@ form button {
     text-align: center;
 }
 
-.side-table-box span {
-    padding: 0% 5% 0% 5%;
-}
-
-.side-table-box .match-status {
-    width: 80%;
+.side-table .match-status {
+    width: 95%;
     height: 12.5%;
+    font-size: 1.25rem;
 }
 
-.side-table-box form {
+.side-table form {
     width: 80%;
     height: 20%;
 }
 
-.side-table-box form button {
+.side-table form button {
     height: 100%;
 }
 
@@ -199,6 +182,7 @@ form button {
     justify-content: center;
 
     height: 27.5%;
+    width: 100%;
 
     box-sizing: border-box;
 }
